# personal-ai-platform

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  alembic.ini  main.py  pyproject.toml
backend/api/: deps.py
backend/api/routes/: health.py  jobs.py  knowledge.py  profile_entities.py  profiles.py
backend/core/: config.py  database.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_profile_tables.py  0003_knowledge_base.py  7f2678117e74_create_job_posts_table.py  c4ae2e1e9056_add_extracted_text_to_documents.py
backend/models/: __init__.py  job.py  knowledge.py  mixins.py  profile.py
backend/parsers/: extractors.py  fetcher.py  job_parser.py  llm_parser.py
backend/repositories/: __init__.py  child_entity_repo.py  job_repo.py  knowledge_repo.py  profile_repo.py
backend/schemas/: __init__.py  job.py  knowledge.py  profile.py
backend/services/: __init__.py  chunking_service.py  embedding_service.py  extraction_service.py  job_service.py  knowledge_service.py  minio_service.py  profile_service.py  qdrant_service.py
backend/tests/: test_chunking.py  test_health.py  test_jobs.py  test_knowledge.py  test_profiles.py
docs/: README.md
docs/adr/: 0001-monorepo-structure.md  0002-tech-stack-selection.md  0003-local-llm-qwen3.md
docs/api/: endpoints.md
docs/architecture/: overview.md  system-design.md
docs/data-models/: er-diagram.md
docs/diagrams/: architecture.md
docs/research/: Personalized Job Application Agent.md  deep-research-report.md
docs/roadmap/: phases.md
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
models/: README.md
models/embeddings/: bge-m3.yaml
scripts/: dev.ps1  dev.sh  setup.ps1  setup.sh
(+47 files in other folders)
