[project]
name = "career-agent-backend"
version = "0.1.0"
description = "Personalized job-application agent backend. Offline, local-first AI platform."
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "personal-ai-platform" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "redis>=5.2",
    "qdrant-client>=1.12",
    "minio>=7.2",
    "ollama>=0.4",
    "jinja2>=3.1",
    "weasyprint>=63",
    "httpx>=0.28",
    "playwright>=1.49",
    "beautifulsoup4>=4.12",
    "spacy>=3.8",
    "tiktoken>=0.8",
    "pyyaml>=6.0",
    "python-multipart>=0.0.12",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "api", "agents", "services", "repositories", "database", "models", "schemas", "pipelines", "parsers", "embeddings", "interview", "tracker", "analytics", "scheduler", "workers", "utils"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
